--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
     <build>
         <defaultGoal>package install</defaultGoal>
-        <!--Just use the porject to replace an old version of the plugin if the user does only copy-paste-->
+        <!--Just use the project name to replace an old version of the plugin if the user does only copy-paste-->
         <finalName>${project.name}</finalName>
 
         <plugins>
@@ -133,12 +133,30 @@
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
             <version>3.4.0</version>
+            <exclusions>
+                <!--definitely not needed-->
+                <exclusion>
+                    <groupId>com.comphenix.executors</groupId>
+                    <artifactId>BukkitExecutors</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>cglib</groupId>
+                    <artifactId>cglib-nodep</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
             <groupId>net.sacredlabyrinth.phaed.simpleclans</groupId>
             <artifactId>SimpleClans</artifactId>
             <version>2.5</version>
+            <exclusions>
+                <!--definitely not needed-->
+                <exclusion>
+                    <groupId>org.getspout</groupId>
+                    <artifactId>spoutplugin</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!--API for economy, permissions and chat-->
@@ -152,6 +170,23 @@
             <groupId>com.herocraftonline.heroes</groupId>
             <artifactId>Heroes</artifactId>
             <version>1.5.3.4-SNAPSHOT</version>
+            <exclusions>
+                <!--We just need the API.-->
+                <exclusion>
+                    <groupId>net.milkbowl.vault</groupId>
+                    <artifactId>Vault</artifactId>
+                </exclusion>
+
+                <!--Currently not available and definitely not needed. Maybe just for testing-->
+                <exclusion>
+                    <groupId>org.spigotmc</groupId>
+                    <artifactId>spigot</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.spigotmc</groupId>
+                    <artifactId>spigot-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
