--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
     <name>ScoreboardStats</name>
     <inceptionYear>2013</inceptionYear>
     <description>Show the Scoreboard with many custom variables</description>
-    <version>0.8.4</version>
+    <version>0.8.5</version>
     <url>http://dev.bukkit.org/bukkit-plugins/scoreboardstats</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <powermock.version>1.5.6</powermock.version>
+        <powermock.version>1.6.1</powermock.version>
     </properties>
 
     <issueManagement>
@@ -142,7 +142,7 @@
         <dependency>
             <groupId>net.sacredlabyrinth.phaed.simpleclans</groupId>
             <artifactId>SimpleClans</artifactId>
-            <version>2.5</version>
+            <version>2.5.1</version>
             <exclusions>
                 <!--definitely not needed-->
                 <exclusion>
@@ -162,7 +162,7 @@
         <dependency>
             <groupId>com.herocraftonline.heroes</groupId>
             <artifactId>Heroes</artifactId>
-            <version>1.5.5</version>
+            <version>1.5.5.4-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>me.desht</groupId>
@@ -208,6 +208,14 @@
             <systemPath>${project.basedir}/lib/IndividualSigns_v2.0.jar</systemPath>
         </dependency>
 
+        <dependency>
+            <groupId>uSkyBlock</groupId>
+            <artifactId>uSkyBlock</artifactId>
+            <version>2.1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/uSkyBlock-api.jar</systemPath>
+        </dependency>
+
         <!--Factions:-->
         <dependency>
             <groupId>com.massivecraft</groupId>
@@ -240,7 +248,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
 
