--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: ${project.version}
 main: ${project.groupId}.${project.artifactId}.${project.name}
 
 # meta informations for plugin managers
-author: games647
+author: [games647, 'https://github.com/games647/ScoreboardStats/graphs/contributors']
 description: |
     ${project.description}
 website: ${project.url}
@@ -18,6 +18,7 @@ softdepend:
     - InSigns
     - Factions
     - Heroes
+    - uSkyBlock
 
 commands:
   sidebar:
