--- a/pom.xml
+++ b/pom.xml
@@ -195,7 +195,7 @@
         <dependency>
             <groupId>com.gmail.nossr50.mcMMO</groupId>
             <artifactId>mcMMO</artifactId>
-            <version>1.5.00</version>
+            <version>1.5.01-SNAPSHOT</version>
         </dependency>
         <!--dependencies in /lib-->
 
