Disable Travis + Use UUID by default

--- a/src/main/resources/sql.yml
+++ b/src/main/resources/sql.yml
@@ -1,7 +1,6 @@
 # These settings aren't required if you disable pvpstats.
 # Here can you configurate your sql setting.
 # If you don't have or want to use a mysql database you can also use a sqlite database
-#
 # MySQL example
 # The default port for a mysql database is 3306
 #  Username: 'bukkit'
@@ -22,5 +21,5 @@ SQL-Settings:
   Timeout: 1000
 
 # This value is used for the pvpstats database. It's not used for the scoreboard features
-# If this value is true. The database will be searched by uuids. 
-uuidUse: false
+# If this value is true. The database will be searched by uuids.
+uuidUse: true
