--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
-# Use https://travis-ci.org/ for automatic testing
-
-# This is a java project
-language: java
-
-script: mvn compile test
-
-# So many servers still have Java 6. So test if the code is Java 6 compatible.
-# http://mcstats.org/global/#Java+Version
-jdk:
-  - openjdk6
-
-# if one build failed, exit testing
-matrix:
-  fast_finish: true
+# Disable Travis. It will fail, because of missing faction version
+## Use https://travis-ci.org/ for automatic testing
+#
+## This is a java project
+#language: java
+#
+#script: mvn compile test
+#
+## So many servers still have Java 6. So test if the code is Java 6 compatible.
+## http://mcstats.org/global/#Java+Version
+#jdk:
+#  - openjdk6
+#
+## if one build failed, exit testing
+#matrix:
+#  fast_finish: true
